fix: white spaces of post paragraphs

--- a/src/pages/Post/Post.module.css
+++ b/src/pages/Post/Post.module.css
@@ -87,6 +87,7 @@
   line-height: 1.7rem;
   text-align: justify;
   transform: translateY(-4rem);
+  white-space: pre-wrap;
   padding: 0 2.8rem;
 }
 
